--- a/ArduinoThermometer/MainPage.xaml
+++ b/ArduinoThermometer/MainPage.xaml
@@ -30,7 +30,7 @@
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me"
+                Text="KLIK"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
