--- a/ArduinoThermometer/AppShell.xaml
+++ b/ArduinoThermometer/AppShell.xaml
@@ -5,8 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ArduinoThermometer"
     Shell.BackgroundColor="#002857"
-    Shell.ForegroundColor="#99d9d9"
-    Shell.FlyoutBehavior="Flyout">
+    Shell.ForegroundColor="#99d9d9">
 
     
 
